Add custom background color for #wpcontent in dev-tools SCSS

--- a/src/scss/dev-tools.scss
+++ b/src/scss/dev-tools.scss
@@ -68,6 +68,13 @@
 // Utilities
 @import '~bootstrap/scss/utilities/api';
 
+
+
+#wpcontent{
+  background-color: #212529;
+}
+
+
 // Dev-Tools Custom Styles
 .dev-tools-container {
   .wrap & {
